fix: resolve null safety warnings and code quality issues